@@ -1,4 +1,7 @@
 2006-05-17  Kalpit Desai <kvdesai@email.unc.edu>
+	* parse_csv_int.m: Now also supports colon (:) operator to make a linearly spaced array.
+
+2006-05-17  Kalpit Desai <kvdesai@email.unc.edu>
 	* parse_csv_int.m: Corrected documentation.
 
 2006-05-17  Kalpit Desai <kvdesai@email.unc.edu>
